# color_table_editor

./: CMakeLists.txt  Dockerfile  Makefile  color_table.h  color_table_editor.cpp  launch_editor.sh
